feature: 进程启停逻辑优化